--- a/.github/workflows/java-pipeline.yml
+++ b/.github/workflows/java-pipeline.yml
@@ -3,8 +3,7 @@ name: "java_app_pipeline"
 
 on:
   push:
-   branches: [ feature ]
-   # branches: [ main, develop, "feature/*", "hotfix/*", "release/*" ]
+   branches: [ main, develop, "feature/*", "hotfix/*", "release/*" ]
 
 jobs:
   
@@ -17,29 +16,31 @@ jobs:
        distribution: "temurin"
        cache: "maven" 
     
- # CodeScanning:
- #    name: Test - SonarCloud Scan
- #     uses: "./.github/workflows/Code_Quality_Stage.yml"
- #     needs: [ Codebuild ]
- #        java-version : "11.0.4"
- #      runnerName: "ubuntu-latest"
+  CodeScanning:
+    name: Test - SonarCloud Scan
+    uses: "./.github/workflows/Code_Quality_Stage.yml"
+    needs: [ Codebuild ]
+    with:
+       java-version : "11.0.4"
+       runnerName: "shara-org-runner"
           
   buildImageandDeploy:
     name: building docker image
-    #needs: [ Codebuild , CodeScanning]
-    needs: [ Codebuild ]
+    needs: [ Codebuild , CodeScanning]
     uses: "./.github/workflows/deploystage.yml"
     with:
-      runnerName: "ubuntu-latest"
+      runnerName: "shara-org-runner"
   TrivyScanner:
       name: Trivyscanner
       uses: "./.github/workflows/trivy.yml"
       needs: [ Codebuild,buildImageandDeploy ] 
       with:
-       runnerName: "ubuntu-latest"
+       runnerName: "shara-org-runner"
   Terraform:
       name: Terraform 
       uses: "./.github/workflows/terraform.yml"
       #needs: [ Codebuild,buildImageandDeploy ]
+      with:
+       runnerName: "shara-org-runner"
       
       
