--- a/.github/workflows/Code_Quality_Stage.yml
+++ b/.github/workflows/Code_Quality_Stage.yml
@@ -26,7 +26,7 @@ jobs:
         - name: SonarCloud Scan
           run: mvn -B clean verify -Psonar -Dsonar.login=${{ secrets.SONAR_TOKEN }}
           env:
-           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+           GITTOKEN: ${{ secrets.GITTOKEN }}
            
  check_quality:
      name: Check Sonar Report Quality
