--- a/.github/workflows/Code_Quality_Stage.yml
+++ b/.github/workflows/Code_Quality_Stage.yml
@@ -23,7 +23,7 @@ jobs:
           with:
            java-version: ${{inputs.java-version}}
         - name: SonarCloud Scanning
-          run: mvn -B clean verify -Psonar -Dsonar.login=${{ secrets.SONAR_TOKEN }
+          run: mvn -B clean verify -Psonar -Dsonar.login=${{ secrets.SONAR_TOKEN }}
           env:
            GITTOKEN: ${{ secrets.GITTOKEN }}
            
