--- a/.github/workflows/java-pipeline.yml
+++ b/.github/workflows/java-pipeline.yml
@@ -30,7 +30,7 @@ jobs:
         - name: Set up JDK 11
           uses: actions/setup-java@v1
           with:
-           java-version: ${{inputs.java-version}}
+           java-version : "11"
         - name: SonarCloud Scanning
           run: mvn -B clean verify -Psonar -Dsonar.login=${{ secrets.SONAR_TOKEN }}
           env:
