--- a/.github/workflows/Code_Quality_Stage.yml
+++ b/.github/workflows/Code_Quality_Stage.yml
@@ -1,6 +1,12 @@
 on:
   workflow_call:
-  
+   secrets:
+    
+      GITTOKEN:
+        required: true
+      SONAR_TOKEN:
+        required: true
+      
    inputs:
       
       runnerName:
