--- a/.github/workflows/trivy.yml
+++ b/.github/workflows/trivy.yml
@@ -1,5 +1,12 @@
 on:
   workflow_call:
+   secrets:
+      DOCKER_USERNAME:
+        required: true
+      DOCKER_PASS:
+        required: true
+      DOCKER_REPO:
+        required: true
    inputs:
       
       runnerName:
@@ -14,41 +21,31 @@ jobs:
        REPO: ${{ secrets.DOCKER_REPO }}
        DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
        DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
-       
-       
     steps:
-     - uses: actions/checkout@v1
-     - name: Set up JDK 11
-       uses: actions/setup-java@v1
-       with:
+        - uses: actions/checkout@v1
+        - name: Set up JDK 11
+          uses: actions/setup-java@v1
+          with:
            java-version: 11.0.4
-      # Checks out the repository this file is in
-     - uses: actions/checkout@v3
-     - name: Install Azure CLI
-       run: |
-         curl -sL https://aka.ms/InstallAzureCLIDeb | sudo bash
-     - name: Check Azure CLI installation
-       run: az --version  
-      # Logs in with your Azure credentials
-     - name: Azure login
-       uses: azure/login@v1.4.6
-       with:
-          client-id: ${{ secrets.AZURE_CLIENT_ID }}
-          tenant-id: ${{ secrets.AZURE_TENANT_ID }}
-          subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
-
-      # Builds and pushes an image up to your Azure Container Registry
-     - name: Build and push image to ACR
-       run: |
-          az acr build --image ${{ env.AZURE_CONTAINER_REGISTRY }}.azurecr.io/${{ env.CONTAINER_NAME }}:${{ github.sha }} --registry ${{ env.AZURE_CONTAINER_REGISTRY }} -g ${{ env.RESOURCE_GROUP }} .
- 
+        - name: Login to Docker Hub
+          run: docker login -u ${{ secrets.DOCKER_USER }} -p ${{ secrets.DOCKER_PASS }}
+        - name: Build Docker image
+          run: docker build -t $REPO:latest -t $REPO:${GITHUB_SHA::8} .
+        - name: Publish Docker image
+          run: docker push $REPO
     
-     - name: Install Trivy
-       run: |
-         curl -sfL https://raw.githubusercontent.com/aquasecurity/trivy/main/contrib/install.sh | sh -s -- -b /usr/local/bin
-
-     - name: Run Trivy scan
-       run: trivy image --clear-cache --format json -o scan_report.json ${{ env.REPO }}:${{ github.sha }}
-
-     - name: Display Trivy scan results
-       run: cat scan_report.json
+        - name: Image Scan
+          uses: aquasecurity/trivy-action@master
+          with:
+           image-ref: $REPO
+           security-checks: 'vuln,secret,config'
+           format: 'sarif'
+           output: 'trivy-image-results.sarif'
+           severity: 'CRITICAL,HIGH'
+          
+        - name: Upload the scan result to GitHub Security
+          uses: github/codeql-action/upload-sarif@v2
+          with:
+           sarif_file: 'trivy-image-results.sarif'
+           category: 'image'
+        
