--- a/.github/workflows/trivy.yml
+++ b/.github/workflows/trivy.yml
@@ -17,10 +17,7 @@ jobs:
   docker:
     name: Publish - Docker Hub
     runs-on: ${{ inputs.runnerName }}
-    env:
-       REPO: ${{ secrets.DOCKER_REPO }}
-       DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
-       DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
+    
     steps:
         - uses: actions/checkout@v1
         - name: Set up JDK 11
@@ -28,7 +25,7 @@ jobs:
           with:
            java-version: 11.0.4
         - name: Login to Docker Hub
-          run: docker login -u ${{ secrets.DOCKER_USER }} -p ${{ secrets.DOCKER_PASS }}
+          run: docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASS }}
         - name: Build Docker image
           run: docker build -t $REPO:latest -t $REPO:${GITHUB_SHA::8} .
         - name: Publish Docker image
