--- a/.github/workflows/trivy.yml
+++ b/.github/workflows/trivy.yml
@@ -16,6 +16,8 @@ jobs:
   docker:
     name: Publish - Docker Hub
     runs-on: ${{ inputs.runnerName }}
+    env:
+       REPO: ${{ secrets.DOCKER_REPO }}
     steps:
         - uses: actions/checkout@v1
         - name: Set up JDK 11
