--- a/.github/workflows/trivy.yml
+++ b/.github/workflows/trivy.yml
@@ -34,7 +34,7 @@ jobs:
         - name: Image Scan
           uses: aquasecurity/trivy-action@master
           with:
-           image-ref: $REPO
+           image-ref: ${{ env.REPO }}
            security-checks: 'vuln,secret,config'
            format: 'sarif'
            output: 'trivy-image-results.sarif'
