--- a/.github/workflows/Build_Stage.yml
+++ b/.github/workflows/Build_Stage.yml
@@ -40,7 +40,12 @@ jobs:
           
       - name: Build with Maven
         run: mvn -B package --file pom.xml
-
+      
+      - name: Upload artifact for deployment job
+        uses: actions/upload-artifact@v3
+        with:
+          name: java-app
+          path: '${{ github.workspace }}/target/*.jar'
 
   publish-job:
       runs-on: ubuntu-latest
@@ -49,7 +54,7 @@ jobs:
         - uses: actions/checkout@v2
         - uses: actions/setup-java@v1
           with:
-            java-version: 14
+            java-version: 11
         - run: mvn -B package --file pom.xml -DskipTests
         - run: mkdir staging && cp target/*jar-with-dependencies.jar staging
         - uses: actions/upload-artifact@v1
