--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -28,7 +28,12 @@ jobs:
       uses: hashicorp/setup-terraform@v1
       with:
         cli_config_credentials_token: ${{ secrets.TF_API_TOKEN }}
-   
+        
+    - name: Install Azure CLI
+      run: |
+       curl -sL https://aka.ms/InstallAzureCLIDeb | sudo bash
+       az version
+
       # Login to Azure
     - name: Azure Login
       uses: azure/login@v1
