--- a/.github/workflows/deploystage.yml
+++ b/.github/workflows/deploystage.yml
@@ -26,7 +26,11 @@ jobs:
         uses: actions/download-artifact@v3
         with:
           name: java-app
-
+      - name: Install Azure CLI
+        run: |
+         curl -sL https://aka.ms/InstallAzureCLIDeb | sudo bash
+          az version
+          
       - name: Log in to Azure
         uses: azure/login@v1
         with:
