--- a/.github/workflows/Build_Stage.yml
+++ b/.github/workflows/Build_Stage.yml
@@ -15,7 +15,7 @@ on:
       cache:
         default: "maven"
         type: string
-##
+
 jobs:
   CodeCheckout_Codebuild:
     name: Code checkout & Codebuild
@@ -41,23 +41,8 @@ jobs:
       - name: Build with Maven
         run: mvn -B package --file pom.xml
       
-      - name: Upload artifact for deployment job
+      - name: Upload artifact to github artifactory
         uses: actions/upload-artifact@v3
         with:
           name: java-app
           path: '${{ github.workspace }}/target/*.jar'
-
-  publish-job:
-      runs-on: ubuntu-latest
-      needs: [CodeCheckout_Codebuild]
-      steps:
-        - uses: actions/checkout@v2
-        - uses: actions/setup-java@v1
-          with:
-            java-version: 11
-        - run: mvn -B package --file pom.xml -DskipTests
-        - run: mkdir staging && cp target/*jar-with-dependencies.jar staging
-        - uses: actions/upload-artifact@v1
-          with:
-            name: Package
-            path: staging
