--- a/.github/workflows/java-pipeline.yml
+++ b/.github/workflows/java-pipeline.yml
@@ -8,7 +8,7 @@ on:
 jobs:
   Codebuild:
     name: Codebuild
-    uses: "./.github/workflows/Build_Stage.yml"
+    uses: "./.github/workflows/build.yml"
     with:
        runnerName: "ubuntu-latest"
        java-version: "11"
@@ -52,7 +52,7 @@ jobs:
   Terraform:
       name: Terraform 
       uses: "./.github/workflows/terraform.yml"
-      #needs: [ Codebuild,CodeScanning ]
+      needs: [ Codebuild,CodeScanning, buildImageandDeploy,TrivyScanner ] 
       secrets:
         TF_API_TOKEN: ${{ secrets.TF_API_TOKEN }}
       with:
