--- a/.github/workflows/java-pipeline.yml
+++ b/.github/workflows/java-pipeline.yml
@@ -10,7 +10,7 @@ jobs:
     name: Codebuild
     uses: "./.github/workflows/build.yml"
     with:
-       runnerName: "ubuntu-latest"
+       runnerName: "demo-org"
        java-version: "11"
        distribution: "temurin"
        cache: "maven" 
@@ -26,7 +26,7 @@ jobs:
      
      with:
        java-version : "11.0.4"
-       runnerName: "ubuntu-latest"
+       runnerName: "demo-org"
             
   buildImageandDeploy:
      name: Building docker image
@@ -47,7 +47,7 @@ jobs:
       secrets:
         DOCKER_REPO: ${{ secrets.DOCKER_REPO }}
       with:
-       runnerName: "ubuntu-latest"
+       runnerName: "demo-org"
        
   Terraform:
       name: Terraform setup
@@ -56,6 +56,6 @@ jobs:
       secrets:
         TF_API_TOKEN: ${{ secrets.TF_API_TOKEN }}
       with:
-       runnerName: "ubuntu-latest"
+       runnerName: "demo-org"
       
       
