--- a/.github/workflows/java-pipeline.yml
+++ b/.github/workflows/java-pipeline.yml
@@ -7,9 +7,9 @@ on:
 
 jobs:
   Codebuild:
-    
+
     name: Codebuild
-    uses: ./.github/templates/build.yml
+    uses: "demo-sample-org/demo-repository/.github/workflows/templates/build.yml@feature"
     with:
        runnerName: "ubuntu-latest"
        java-version: "11"
@@ -17,7 +17,7 @@ jobs:
        cache: "maven" 
   CodeScanning:
      name: SonarCloud Scan
-     uses: "./.github/workflows/templates/code-quality.yml@feature"
+     uses: "demo-sample-org/demo-repository/.github/workflows/templates/code-quality.yml@feature"
      needs: [ Codebuild ]
      secrets:
       GITTOKEN: "${{ secrets.GITTOKEN }}"
@@ -30,7 +30,7 @@ jobs:
   buildImageandDeploy:
      name: Building docker image
      needs: [ Codebuild, CodeScanning]
-     uses: "./.github/workflows/templates/deploy.yml"
+     uses: "demo-sample-org/demo-repository/.github/workflows/templates/deploy.yml@feature"
      secrets:
         DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
         DOCKER_PASS: ${{ secrets.DOCKER_PASS }}
@@ -41,7 +41,7 @@ jobs:
       
   TrivyScanner:
       name: Trivy Scan
-      uses: "./.github/workflows/templates/trivyscan.yml"
+      uses: "demo-sample-org/demo-repository/.github/workflows/templates/trivyscan.yml@feature"
       needs: [ Codebuild,CodeScanning, buildImageandDeploy ] 
       secrets:
         DOCKER_REPO: ${{ secrets.DOCKER_REPO }}
@@ -50,11 +50,9 @@ jobs:
        
   Terraform:
       name: Terraform setup
-      uses: "./.github/workflows/templates/terraform.yml"
+      uses: "demo-sample-org/demo-repository/.github/workflows/templates/terraform.yml@feature"
       needs: [ Codebuild,CodeScanning, buildImageandDeploy,TrivyScanner ] 
       secrets:
         TF_API_TOKEN: ${{ secrets.TF_API_TOKEN }}
       with:
        runnerName: "ubuntu-latest"
-      
-      
